# Python-Development

./: .cursorrules  .gitignore  CLAUDE.md  Python-Development.code-workspace  README.md  _commit_batch.py  import_sizes.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
01_basic_python/: basic_kw.txt  basics.py  comparing_floats.py  enums.py  pass_statement.txt  py_list.ipynb  py_variables.py  refactoring_var_name.py
01_basic_python/01_basics/: basics.py  enums.py  how_run_py_script.txt  refactoring_var_name.py
01_basic_python/02_control_flow/: truthy_falsy.py
01_basic_python/04_modules_and_packages/: README.md  notes.ipynb
01_basic_python/data_structures/: list_vs_array.py  mutables_vs_immutables.txt
01_basic_python/list_comprehensions/: README.md  notes.ipynb
01_basic_python/modules_and_packages/: README.md  cal_mod.py  fact.py  mod.py  notes.ipynb
01_basic_python/named_tuples/: README.md  main.ipynb
02_intermediate_python/01_functions/: README.md  all_builtins_func.ipynb  faq.md  lru_caching.py  notes_recursion.ipynb
02_intermediate_python/01_learn_functions/: README.md  all_builtins.py  args_and_kwargs.py  faq.md  functools.txt  nonlocal_gloabal_scope.py  (+1 more)
04_misc_python/: reading_secrets_1.py  test.py  write_better_docstrings.py
05_projects/: employees.csv  o_auth.txt
error_and_exceptions_handling/: README.md  notes.ipynb
learn_functions/: README.md
logging_errors/: README.md  main.py
mysql/: README.md  notes.md  questions.md
named_tuples/: README.md  main.ipynb
type_annotations_in_Python/: README.md
(+129 files in other folders)
